k8s-deployment/statefulset.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rdicidr
---
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-headless
  namespace: rdicidr
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 80
  clusterIP: None
  selector:
    app: rdicidr
---
apiVersion: v1
kind: Service
metadata:
  name: rdicidr
  namespace: rdicidr
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 80
  type: ClusterIP
  selector:
    app: rdicidr
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr
  namespace: rdicidr
spec:
  serviceName: rdicidr-headless
  replicas: 3
  selector:
    matchLabels:
      app: rdicidr
  template:
    metadata:
      labels:
        app: rdicidr
    spec:
      containers:
      - name: rdicidr
        image: elsdokr/rdicidr-app:v1.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: rdicidr-data
          mountPath: /var/lib/rdicidr
  volumeClaimTemplates:
  - metadata:
      name: rdicidr-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: rdicr-storage
      resources:
        requests:
          storage: 1Gi
